RESOLVED FIXED289347
REGRESSION (291478@main): [ macOS wk2 arm64 ] http/tests/site-isolation/fullscreen.html is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=289347
Summary REGRESSION (291478@main): [ macOS wk2 arm64 ] http/tests/site-isolation/fulls...
Karl Rackler
Reported 2025-03-07 08:55:31 PST
Description: http/tests/site-isolation/fullscreen.html This issue can be reproduced using command: run-webkit-tests --debug --debug-rwt-logging --exit-after-n-failures 1 --exit-after-n-crashes-or-timeouts 1 --iterations 100 --force --no-retry http/tests/site-isolation/fullscreen.html History: https://results.webkit.org/?suite=layout-tests&test=http%2Ftests%2Fsite-isolation%2Ffullscreen.html&platform=mac&architecture=arm64 Diff: @@ -1,8 +1,8 @@ supportsFullScreen() == true enterFullScreenForElement() -beganEnterFullScreen() - initialRect.size: {300, 150}, finalRect.size: {300, 150} +beganEnterFullScreen() - initialRect.size: {800, 600}, finalRect.size: {300, 150} exitFullScreenForElement() -beganExitFullScreen() - initialRect.size: {800, 600}, finalRect.size: {300, 150} +beganExitFullScreen() - initialRect.size: {800, 600}, finalRect.size: {800, 600} FIXME: Size after entering should be 600x800 like it is with site isolation off. The size currently comes from screenRectOfContents.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-03-07 08:55:49 PST
EWS
Comment 2 2025-03-07 09:03:27 PST
Test gardening commit 291777@main (0e332999be8a): <https://commits.webkit.org/291777@main> Reviewed commits have been landed. Closing PR #42087 and removing active labels.
EWS
Comment 3 2025-03-17 17:55:11 PDT
Committed 292289@main (43de8b9eaabf): <https://commits.webkit.org/292289@main> Reviewed commits have been landed. Closing PR #42576 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.