REGRESSION (291478@main): [ macOS wk2 arm64 ] http/tests/site-isolation/fullscreen.html is a flaky failure https://bugs.webkit.org/show_bug.cgi?id=289347 rdar://146487655

Reviewed by Charlie Wolfe.

When entering fullscreen on an element in a site-isolated iframe, enterFullScreenForOwnerElementsInOtherProcesses
applies CSS to the owner element in another process.  During a presentation update, Messages::WebPage::UpdateFrameSize
is sent to the child frame after the parent frame changes the child frame's size.  In order to get the correct
starting and ending size, this needs to happen before Messages::WebFullScreenManagerProxy::BeganEnterFullScreen
is sent.  To accomplish this, I await the presentation update earlier in the enterFullscreen pipeline when site
isolation is enabled in addition to waiting in WebFullScreenManagerProxy::beganEnterFullScreen.

* LayoutTests/http/tests/site-isolation/fullscreen-expected.txt:
* LayoutTests/http/tests/site-isolation/fullscreen.html:
* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebKit/UIProcess/WebFullScreenManagerProxy.cpp:
(WebKit::WebFullScreenManagerProxy::enterFullScreen):
(WebKit::WebFullScreenManagerProxy::beganEnterFullScreen):

Canonical link: https://commits.webkit.org/292289@main